<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginPage" tools:layout_editor_absoluteY="25dp"
        android:background="#f3e5ab">

    <ImageView
            android:layout_width="156dp"
            android:layout_height="0dp" app:srcCompat="@drawable/chef_hat_512"
            android:id="@+id/imageView3"
            android:layout_marginBottom="53dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/error_email"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_textField_login"
            android:hint="@string/email"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/password_textField_login"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:padding="4dp"
              android:ems="10"
              android:text=""
              android:textColor="@color/colorAlert"
              android:id="@+id/error_email"
              app:layout_constraintStart_toStartOf="@id/email_textField_login"
              app:layout_constraintTop_toBottomOf="@id/imageView3" android:layout_marginBottom="59dp"
              app:layout_constraintBottom_toTopOf="@id/error_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/password_textField_login"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/error_email" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_textField_login" android:layout_marginBottom="268dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:padding="4dp"
              android:ems="10"
              android:text=""
              android:textColor="@color/colorAlert"
              android:id="@+id/error_password"
              app:layout_constraintStart_toStartOf="@id/password_textField_login"
              app:layout_constraintTop_toBottomOf="@id/error_email" android:layout_marginBottom="31dp"
              app:layout_constraintBottom_toTopOf="@id/login_button_login"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_login"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/error_password"
            android:layout_marginEnd="14dp" android:layout_marginBottom="162dp"
            app:layout_constraintEnd_toEndOf="@id/error_password"/>
</android.support.constraint.ConstraintLayout>