<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:background="#f3e5ab">

    <TextView
            android:text="@string/my_builds"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_height="wrap_content" android:id="@+id/textView12"/>
    <ListView
            android:id="@+id/recipe_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"/>

</FrameLayout>