<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="6dp"
                    android:layout_height="40dp"
                    android:id="@+id/productList">

        <TextView
                android:text="@string/product_name"
                app:layout_column="0"
                app:layout_row="0"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/product_name_item"/>
    </RelativeLayout>
</RelativeLayout>