<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
    android:id="@+id/user_layout">
        <FrameLayout

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/fragmentContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        >
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigation_View"
            android:layout_gravity="start"
            app:menu="@menu/drawer_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>